# MABMIS

./: .gitignore
doc/: MABMIS Software Release 1.0.20110428.doc  MABMIS Software Release 1.0.20110502.doc  MABMIS Software Release 1.0.20110502.xps  MABMIS Software Release 1.0.20110505.doc
result/: UA_seg_003.img  UB_seg_003.img  VA_seg_003.img  VB_seg_003.img  WA_seg_003.img  WB_seg_003.img
run/: MABMIS_GUI_main  MABMIS_GUI_mainLauncher
src/: CMakeLists.txt  itkJia3D.cxx  mabmis.cc  mabmis.h  multi_channel_demons.sh
src/Command/: CMakeLists.txt  IGR3D_MABMIS_i.cxx  apply_deformation_field.cc  itkJia3D.cxx  itkJia3D.h  normalize_intensity.cc
src/GUI/: CMakeLists.txt  MABMIS_GUI_main.cxx  vtkKWMABMISGUI.cxx  vtkKWMABMISGUI.h
src/Gor.xcworkspace/: contents.xcworkspacedata
src/MATLAB/: MergeRegionsOfInterestLONILPBA40.m  ReadAnalyzeHeader.m  readAnalyzeHeader.m
test/: AA_seg_000.img  AB_cbq_000.img  AC_cbq_000.img  AC_seg_000.img  AD_seg_000.img  AH_cbq_000.img  UA_cbq_000.img  VB_cbq_000.img  WB_cbq_000.img  all_ids.txt
testdata/: AA_cbq_000.img  AB_seg_000.img  AD_cbq_000.img  AE_cbq_000.img  AE_seg_000.img  AF_cbq_000.img  AH_seg_000.img  UA_seg_001.img  UA_seg_002.img  UA_seg_003.img  UB_cbq_000.img  UB_seg_001.img  UB_seg_002.img  UB_seg_003.img  VA_cbq_000.img  VA_seg_001.img  VA_seg_003.img  VB_seg_001.img  VB_seg_002.img  VB_seg_003.img  WA_cbq_000.img  WA_seg_001.img  WA_seg_003.img  WB_seg_001.img  WB_seg_003.img
testdataref/: AF_seg_000.img  AG_cbq_000.img  AG_seg_000.img  AH_cbq_000.hdr  VA_seg_002.img  WA_seg_002.img  WB_seg_002.img
